aligning items fixed

--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,7 @@ input:hover {
 .scale-wrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 15px;
 }
 
